# ai-trap-cpp

./: create_proto.sh  meson.build  system.toml
archive/session_database/: session_database.cpp  session_database.h
archive/tracker/: tracker.cpp  tracker.h
archive/websocket_server/: protocol_msg.cpp  protocol_msg.h  websocket_server.h
disabled/include/: capture_reference.h  detection_camera.h  yolo11_ncnn_model.h
disabled/src/: detection_camera.cpp  image_reference.cppx
include/: capture_reference.h  channel.h  detection_camera.h  image_reference.h  session_database.h  websocket_server.h  yolo11_ncnn_model.h
include/session/: detection_model.h
include/websocket/: listener.h  session.h
src/: detection_camera.cpp  image_reference.cpp  main.cpp  request_queue.cpp  session_database.cpp  websocket_server.cpp  yolo11_ncnn_model.cpp
src/actor_framework/: actor.h  mailbox.h
src/detection_camera/: detection_camera.cpp  detection_camera.h
src/detection_camera/ai_camera/: ai_camera.cpp  ai_camera.h
src/detection_camera/picamera3/: picamera3_actor.cpp  picamera3_actor.h
src/detection_model/: yolo11_ncnn_model.cpp  yolo11_ncnn_model.h
src/detection_model/yolo11_ncnn/: yolo11_ncnn_actor.cpp  yolo11_ncnn_actor.h
src/references/: capture_reference.cpp  capture_reference.h  detection_reference.cpp  detection_reference.h  image_reference.h
src/references/capture_reference/: capture_reference.h  capture_reference_mixin.h  detection_reference.h  image_reference.cpp  image_reference.h
src/references/recycle_reference/: recycle_reference.h  recycle_reference_mixin.h
src/session_database/: session_database.h  session_model.cpp  session_model.h
src/tracker/: tracker.h
src/websocket/: listener.cpp  session.cpp
src/websocket_server/: listener.cpp  session.cpp  websocket_server.cpp
subprojects/: .gitignore
